logo instructions and local kind3 managment

--- a/templates/created.html
+++ b/templates/created.html
@@ -13,7 +13,7 @@
 <nav class="navbar is-light" role="navigation" aria-label="main navigation">
     <div class="navbar-brand">
         <a href="/" class="navbar-item">
-            <img src="/static/rsslay-logo.png" alt="{{.RelayName}}: convert RSS or Atom feeds into Nostr profiles" width="112" height="28">
+            <img src="/static/rssnotes-logo.png" alt="{{.RelayName}}: convert RSS or Atom feeds into Nostr profiles" width="112" height="28">
         </a>
         <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false" data-target="navMenu">
             <span aria-hidden="true"></span>
