dockerfile and typos

--- a/templates/index.html
+++ b/templates/index.html
@@ -135,7 +135,7 @@
             </div>
         </form>
     </div>
-    <h2 class="subtitle">Some of the existing feeds (50 random selected)</h2>
+    <h2 class="subtitle">Existing feeds </h2>
     <table class="table">
         <tbody>
         <tr>
