display feed icons

--- a/web/templates/imported.html
+++ b/web/templates/imported.html
@@ -117,7 +117,7 @@
         </tr>
         {{range .Feeds}}
         <tr>
-            <td><p>{{.Url}}</p></td>
+            <td><p>{{.BookmarkEntity.URL}}</p></td>
             <td><p>{{.Error}}</p></td>
             <td><p>{{.ErrorMessage}}</p></td>
         </tr>
