readme and link cleanup

--- a/web/templates/created.html
+++ b/web/templates/created.html
@@ -124,7 +124,7 @@
         <p>
             <a href="https://github.com/trinidz/rssnotes"><strong>rssnotes</strong></a> original work by <a href="https://fiatjaf.com">fiatjaf</a> and <a href="https://piraces.dev">piraces</a> modifications by <a
                 href="https://njump.me/npub15ucds95a8m2whgj4esll39lhxta5jwk8lqvmtz6ne8lf8ksmggrqz74dq7">trinidz</a>. The source code is
-            <a href="https://github.com/trinidz/rssnotes/blob/main/LICENSE">UNlicensed</a>. Keep the good vibes 🤙
+            <a href="https://unlicense.org/">UNlicensed</a>. Keep the good vibes 🤙
         </p>
     </div>
 </footer>
