--- a/web/templates/search.html
+++ b/web/templates/search.html
@@ -109,9 +109,9 @@
             <td><img src="{{.BookmarkEntity.ImageURL}}" alt="feed icon" width="128" height="128"></td> 
             <td><a href="{{.BookmarkEntity.URL}}" style="word-break: break-all;">{{.BookmarkEntity.URL}}</a></td>
             <td>
-                <a href="https://njump.me/{{.NPubKey}}" style="word-break: break-all;">{{.NPubKey}}</a>
+                <span>{{.NPubKey}}</span>
                 <p>---</p>
-                <a href="https://www.nostr.guru/p/{{.BookmarkEntity.PubKey}}" style="word-break: break-all;">{{.BookmarkEntity.PubKey}}</a>  
+                <span>{{.BookmarkEntity.PubKey}}</span>  
             <td><img src="/assets/qrcodes/{{.NPubKey}}.png" alt="npub qrcode" width="128" height="128">
             </td>
             <td>
@@ -137,7 +137,7 @@
         <p>
             <a href="https://github.com/trinidz/rssnotes"><strong>rssnotes</strong></a> original work by <a href="https://fiatjaf.com">fiatjaf</a> and <a href="https://piraces.dev">piraces</a> modifications by <a
                 href="https://njump.me/npub15ucds95a8m2whgj4esll39lhxta5jwk8lqvmtz6ne8lf8ksmggrqz74dq7">trinidz</a>. The source code is
-            <a href="https://github.com/trinidz/rssnotes/blob/main/LICENSE">UNlicensed</a>. Keep the good vibes 🤙
+            <a href="https://unlicense.org/">UNlicensed</a>. Keep the good vibes 🤙
         </p>
     </div>
 </footer>
