publish metadata note on create and live urls

--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -151,11 +151,12 @@
         <tr>
             <td><img src="{{.BookmarkEntity.ImageURL}}" alt="feed icon" width="128" height="128"></td> 
             <td><a href="{{.BookmarkEntity.URL}}" style="word-break: break-all;">{{.BookmarkEntity.URL}}</a></td>
-            <td><span>{{.NPubKey}}</span>
+            <td>
+                <a href="https://njump.me/{{.NPubKey}}" style="word-break: break-all;">{{.NPubKey}}</a>
                 <p>---</p>
-                <span>{{.BookmarkEntity.PubKey}}</span> 
-            <td><img src="/assets/qrcodes/{{.NPubKey}}.png" alt="npub qrcode" width="128" height="128">
+                <a href="https://njump.me/{{.NPubKey}}" style="word-break: break-all;">{{.BookmarkEntity.PubKey}}</a>     
             </td>
+            <td><img src="/assets/qrcodes/{{.NPubKey}}.png" alt="npub qrcode" width="128" height="128"></td>
             <td>
                 <div class="buttons">
                     <a href="/delete?pubkey={{.BookmarkEntity.PubKey}}" target="_self" class="button is-small is-link is-light">Delete</a>
