--- a/web/templates/search.html
+++ b/web/templates/search.html
@@ -94,7 +94,7 @@
             </div>
         </form>
     </div>
-    <h2 class="subtitle">Found feeds (showing a maximum of 50, refine your query if necessary)</h2>
+    <h2 class="subtitle">Found feeds (refine your query if necessary)</h2>
     <table class="table">
         <tbody>
         <tr>
